// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compilev2 HTML "alias" 1`] = `
VFile {
  "contents": "[bar](foo.html)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 HTML "regular" 1`] = `
VFile {
  "contents": "[foo](foo.html)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 HTML "regularWithAnchor" 1`] = `
VFile {
  "contents": "[foo](foo.html#one)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 HTML "regularWithExtension" 1`] = `
VFile {
  "contents": "[foo](foo.html)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 HTML "textString1" 1`] = `
VFile {
  "contents": "See the [FAQ](dendron.faq.html) for answers for
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 HTML "withId" 1`] = `
VFile {
  "contents": "[foo](foo-id.html)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 HTML "withSpace" 1`] = `
VFile {
  "contents": "[bar](foo bar.html)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_DENDRON "alias" 1`] = `
VFile {
  "contents": "[[bar|foo]]
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_DENDRON "regular" 1`] = `
VFile {
  "contents": "[[foo]]
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_DENDRON "regularWithAnchor" 1`] = `
VFile {
  "contents": "[[foo#one]]
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_DENDRON "regularWithExtension" 1`] = `
VFile {
  "contents": "[[foo]]
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_DENDRON "textString1" 1`] = `
VFile {
  "contents": "See the [[FAQ|dendron.faq]] for answers for
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_DENDRON "withId" 1`] = `
VFile {
  "contents": "[[foo]]
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_DENDRON "withSpace" 1`] = `
VFile {
  "contents": "[[bar|foo bar]]
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_ENHANCED_PREVIEW "alias" 1`] = `
VFile {
  "contents": "[bar](foo.md)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_ENHANCED_PREVIEW "regular" 1`] = `
VFile {
  "contents": "[foo](foo.md)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_ENHANCED_PREVIEW "regularWithAnchor" 1`] = `
VFile {
  "contents": "[foo](foo.md)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_ENHANCED_PREVIEW "regularWithExtension" 1`] = `
VFile {
  "contents": "[foo](foo.md)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_ENHANCED_PREVIEW "textString1" 1`] = `
VFile {
  "contents": "See the [FAQ](dendron.faq.md) for answers for
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_ENHANCED_PREVIEW "withId" 1`] = `
VFile {
  "contents": "[foo](foo-id.md)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_ENHANCED_PREVIEW "withSpace" 1`] = `
VFile {
  "contents": "[bar](foo%20bar.md)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_REGULAR "alias" 1`] = `
VFile {
  "contents": "[bar](foo)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_REGULAR "regular" 1`] = `
VFile {
  "contents": "[foo](foo)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_REGULAR "regularWithAnchor" 1`] = `
VFile {
  "contents": "[foo](foo)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_REGULAR "regularWithExtension" 1`] = `
VFile {
  "contents": "[foo](foo)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_REGULAR "textString1" 1`] = `
VFile {
  "contents": "See the [FAQ](dendron.faq) for answers for
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_REGULAR "withId" 1`] = `
VFile {
  "contents": "[foo](foo-id)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`compilev2 MD_REGULAR "withSpace" 1`] = `
VFile {
  "contents": "[bar](foo%20bar)
",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`parse doesn't parse inline code block: bond 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "inlineCode",
          "value": "[[foo.md]]",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parse link with space 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "data": Object {
            "alias": "foo bar",
            "anchorHeader": undefined,
            "filters": Array [],
          },
          "position": Position {
            "end": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "wikiLink",
          "value": "foo bar",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
